Adding description to modeling file

--- a/Modeling.qmd
+++ b/Modeling.qmd
@@ -1,6 +1,7 @@
 ---
 title: "ST558FinalModeling"
 author: "Luke Freudenheim"
+description: "In this file we will look at modeling the diabetes data set. We will attempt to fit 3 different logistic regression models, and we will select the model with the lowest logLoss. After this, we will fit this same model using a classification tree method and a random forest method. In these methods, we will use cross validation to select the best tuning parameters. Lastly, we will make predictions on the test set using these models and compare the accuracies of each model."
 format: html
 ---
 
